--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <p class="text">Você selecionou
             <span id="count">0</span>
-            lugares. Total R$<span id="total">0</span>
+            lugares. Total: R$<span id="total">0</span>
         </p>
         <script src="script.js "></script>
     </body>
